fix WalletSendConfirmationDialog and HWSendConfirmationDialog gaps

--- a/app/components/wallet/send/HWSendConfirmationDialog.scss
+++ b/app/components/wallet/send/HWSendConfirmationDialog.scss
@@ -5,7 +5,7 @@
     background-color: var(--theme-hw-send-confirmation-info-block-background-color);
     font-family: var(--font-regular);
     padding: 5px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     line-height: 1.38;
     font-size: 14px;
     opacity: 0.7;
